[gd_scene load_steps=4 format=3 uid="uid://c6rdv2pa3i622"]

[ext_resource type="Script" path="res://scenes/destructables.gd" id="1_1v4ud"]
[ext_resource type="Texture2D" uid="uid://w8kspcbqlxpe" path="res://res/explodable_sheet.png" id="1_fxakg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2lhjd"]
size = Vector2(254, 276)

[node name="destructables" type="Node2D"]
script = ExtResource("1_1v4ud")

[node name="ExplodableSheet" type="Sprite2D" parent="."]
position = Vector2(1, -2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_fxakg")
hframes = 2

[node name="Area2D" type="Area2D" parent="ExplodableSheet"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplodableSheet/Area2D"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_2lhjd")

[connection signal="mouse_entered" from="ExplodableSheet/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="ExplodableSheet/Area2D" to="." method="_on_area_2d_mouse_exited"]
